# van-link-PAW

./: .gitignore  README.md  README.rst  app.db  bloguvv.py  config.py  pagamentos-test.py  pyproject.toml  readme.md  requirements.txt  test.py  teste.py  transporte.py  van-link-paw.py
app/: __init__.py  errors.py  forms.py  models.py  routes.py
app/static/: base.css  edit_profile.css  index.css  index.js  login.css  user.css
app/templates/: 404.html  500.html  _post.html  base.html  bootstrap.html  edit_profile.html  index.html  login.html  register.html  user.html
migrations/versions/: 438dbc400dcd_posts_table.py  47d1e25282f6_users_table.py  5e1b3e9d7539_new_fields_in_user_model.py  cc8d811cf737_cria_classes_do_modelo_motorista_.py
